# mmdski.github.io

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Gemfile  README.md  _config.yml  index.html  index.markdown  meson.build  meson_options.txt  requirements.txt  résumé.md  wasm32.ini
_drafts/: chlib-project.md  interactive-sinusoid.md  javascript-matrix-wrapper.md  single-linear-reservoir-pt2.md  single-linear-reservoir.md  trouble-with-doubles.md  why-c.md
_includes/: custom-head.html  header.html
_layouts/: home.html
_posts/: 2021-12-21-getting-started.markdown  2021-12-23-interactive-sinusoid.md  2021-12-28-matrix-interface.md  2021-12-30-basic-matrix-operations.md  2022-01-09-chlib-project.md  2022-01-30-single-linear-reservoir.md  2022-02-06-single-linear-reservoir-pt2.md  2022-04-24-wasm32-gsl.md
assets/2022/06/: fl.c
assets/js/: chlib.js  chlib.wasm  chlsin.js  chlsin.wasm  matrix.js  mmdski.js  mmdski.wasm
chl/: Doxyfile  meson.build
chl/app/: meson.build  real.c
chl/include/: chl.h
chl/include/chl/: chlmath.h  chlmatrix.h
chl/src/: chlmatrix.c  chlmem.c  chlsin.c  meson.build
chl/tests/: matrix.c  meson.build
chl/tests/memory/: matrix_mem_test.c  meson.build
chl/tests/unit/: matrix.c  meson.build
chlib/: Doxyfile  meson.build
chlib-docs/html/: chl_8h.html  chl_8h__incl.map  chl_8h__incl.md5  chl_8h_source.html  chlmath_8h.html  chlmath_8h__dep__incl.map  chlmath_8h__dep__incl.md5  chlmath_8h_source.html  chlmatrix_8h.html  chlmatrix_8h__dep__incl.map  chlmatrix_8h__dep__incl.md5  chlmatrix_8h__incl.map  chlmatrix_8h__incl.md5  chlmatrix_8h_source.html  dir_b98f26d6fa29a6958fb036eea8eed482.html  files.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html
chlib/app/: real.c
chlib/docs/: Doxyfile  conf.py  index.rst
chlib/docs/xml/: chl_8h.xml  chlmath_8h.xml  chlmatrix_8h.xml  dir_b98f26d6fa29a6958fb036eea8eed482.xml  index.xml  indexpage.xml
chlib/ems/: matrix.c  meson.build
chlib/include/chl/: chlmath.h  chlmatrix.h
chlib/src/: chlmatrix.c  chlmem.h  meson.build
chlib/tests/: meson.build
chlib/tests/unit/: matrix.c
js/: chl.js  chl.wasm  chlsin.js  chlsin.wasm  plotsin.js
script/: publish.sh  watch.sh
src/: CMakeLists.txt  sine.c
